# KataTrainReservation

./: .gitignore  Justfile  README.md  guiding_test.py  license.txt  pyproject.toml
booking_reference_service/: booking_reference_service.py  sample_client.py  test_booking_reference_service.py
python/: ticket_office.py
ticket_office/: test_ticket_office.py  ticket_office.py
train_data_service/: sample_client.py  start_service.py  test_train_data_service.py  train_data_service.py  train_data_service_flask.py
