[project]
name = "train-reservation"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "cherrypy",
]

[project.optional-dependencies]
flask = ["flask"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = [
    "train_data_service",
    "booking_reference_service",
]
